fix(form): fix ligthfilter no wrap style

--- a/packages/form/src/layouts/LightFilter/index.less
+++ b/packages/form/src/layouts/LightFilter/index.less
@@ -22,6 +22,7 @@
     display: flex;
     margin-top: -8px;
     margin-right: -4px;
+    flex-wrap: wrap;
   }
 
   &-item {
